--- a/app/nunjucks/index.html
+++ b/app/nunjucks/index.html
@@ -263,7 +263,7 @@
         </div>
         <div class="prices__items">
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-1.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-1.jpg);">
                 <div class="prices__item__title">
                     Сертификат соответствия ТР ТС
                 </div>
@@ -276,7 +276,7 @@
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-2.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-2.jpg);">
                 <div class="prices__item__title">
                     декларация соответствия ТР ТС
                 </div>
@@ -289,7 +289,7 @@
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-3.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-3.jpg);">
                 <div class="prices__item__title">
                     Декларация сертификации ГОСТ Р
                 </div>
@@ -302,7 +302,7 @@
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-4.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-4.jpg);">
                 <div class="prices__item__title">
                     Сертификат соответствия ГОСТ Р
                 </div>
@@ -315,7 +315,7 @@
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-5.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-5.jpg);">
                 <div class="prices__item__title">
                     Сертификат Таможенного союза
                 </div>
@@ -328,7 +328,7 @@
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-6.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-6.jpg);">
                 <div class="prices__item__title">
                     Добровольная сертификация
                 </div>
@@ -341,7 +341,7 @@
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-7.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-7.jpg);">
                 <div class="prices__item__title">
                     Сертификация халяль
                 </div>
@@ -354,7 +354,7 @@
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-8.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-8.jpg);">
                 <div class="prices__item__title">
                     Экологический сертификат
                 </div>
@@ -367,7 +367,7 @@
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-9.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-9.jpg);">
                 <div class="prices__item__title">
                     Отказное <br />
                     письмо
@@ -381,7 +381,7 @@
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-10.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-10.jpg);">
                 <div class="prices__item__title">
                     Сертификат <br />
                     исо 9001
@@ -395,7 +395,7 @@
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-11.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-11.jpg);">
                 <div class="prices__item__title">
                     Сертификат <br />
                     хассп
@@ -409,7 +409,7 @@
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-12.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-12.jpg);">
                 <div class="prices__item__title">
                     СГР
                 </div>
@@ -422,7 +422,7 @@
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-13.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-13.jpg);">
                 <div class="prices__item__title">
                     Технические условия
                 </div>
@@ -435,7 +435,7 @@
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-14.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-14.jpg);">
                 <div class="prices__item__title">
                     Сертификат <br />
                     исо 9001
@@ -449,7 +449,7 @@
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-15.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-15.jpg);">
                 <div class="prices__item__title">
                     Сертификат <br />
                     хассп
@@ -463,7 +463,7 @@
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
-            <div class="prices__item" style="background-image: url(../img/prices-15.jpg);">
+            <div class="prices__item" style="background-image: url(img/prices-15.jpg);">
                 <div class="prices__item__title">
                     СГР
                 </div>
