--- a/app/nunjucks/index.html
+++ b/app/nunjucks/index.html
@@ -1,4 +1,4 @@
-{% set title = 'Центр сертификации' %} {% extends 'layouts/_main.html' %} {% block content
+{% set title = 'Центр сертификации | Главная' %} {% extends 'layouts/_main.html' %} {% block content
 %}
 <!-- hero -->
 <div class="hero">
