--- a/app/nunjucks/index.html
+++ b/app/nunjucks/index.html
@@ -272,7 +272,7 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 4 000 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
@@ -285,7 +285,7 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 2 000 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
@@ -298,7 +298,7 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 5 000 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
@@ -311,7 +311,7 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 6 000 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
@@ -324,7 +324,7 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 5 500 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
@@ -337,7 +337,7 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 3 000 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
@@ -350,7 +350,7 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 10 000 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
@@ -363,7 +363,7 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 15 000 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
@@ -377,7 +377,7 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 1 000 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
@@ -391,7 +391,7 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 5 000 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
@@ -405,7 +405,7 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 6 000 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
@@ -418,7 +418,7 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 15 000 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
@@ -431,7 +431,7 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 1 000 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
@@ -445,7 +445,7 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 5 000 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
@@ -459,7 +459,7 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 6 000 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
             <!-- prices__item -->
@@ -472,11 +472,11 @@
                     лаборатории, поэтому мы не работаем как посредники.
                 </div>
                 <div class="prices__item__price">от 15 000 руб</div>
-                <a href="/" class="prices__item__btn">Подробнее</a>
+                <a href="/" class="btn__noborderradius">Подробнее</a>
             </div>
             <!--END prices__item -->
         </div>
-        <div class="prices__btn">Смотреть ещё</div>
+        <div class="btn__noborderradius">Смотреть ещё</div>
     </div>
 </div>
 <!--END prices -->
@@ -498,7 +498,7 @@
                     Оставьте заявку на сайте, наш специалист свяжется с вами для
                     подтверждения заявки в течение рабочего дня
                 </div>
-                <div data-click-modal-open="call-order" class="contacts__item__btn">Оставить заявку</div>
+                <div data-click-modal-open="call-order" class="btn__noborderradius">Оставить заявку</div>
             </div>
             <!-- contacts__item -->
             <!-- contacts__item -->
@@ -725,7 +725,7 @@
                     <input type="text" placeholder="+7 999 876-54-32" />
                 </div>
                 <div class="formblock__main__form__btn">
-                    <button>отправить</button>
+                    <button class="btn__noborderradius">отправить</button>
                 </div>
             </form>
             <div class="formblock__main__politics">Нажимая на кнопку “отправить” Вы принимаете условия <a href="">политики конфинденциальности</a> </div>
