--- a/app/nunjucks/ohrana-truda.html
+++ b/app/nunjucks/ohrana-truda.html
@@ -10,7 +10,7 @@
         </ul>
         <h1 class="page__head__title">Охрана труда</h1>
         <div class="page__head__btnblock">
-            <button class="page__head__btn">Сохранить в закладки</button>
+            <button class="btn__noborderradius">Сохранить в закладки</button>
             <div class="page__head__social">
                 <a href="/">
                     <img src="img/page__head__fb.png" alt="">
