--- a/app/nunjucks/sertificate.html
+++ b/app/nunjucks/sertificate.html
@@ -205,32 +205,35 @@ block content %}
         </div>
         <div class="page__tableblock__tables">
             <!-- page__tableblock__table -->
-            <table class="page__tableblock__table">
-                <thead>
-                    <tr>
-                        <td>Документ</td>
-                        <td>Стоимость</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Сертификат соответствия продукции</td>
-                        <td>от 10 000 рублей</td>
-                    </tr>
-                    <tr>
-                        <td>Сертификат соответствия продукции</td>
-                        <td>от 10 000 рублей</td>
-                    </tr>
-                    <tr>
-                        <td>Сертификат соответствия продукции</td>
-                        <td>от 10 000 рублей</td>
-                    </tr>
-                    <tr>
-                        <td>Сертификат соответствия продукции</td>
-                        <td>от 10 000 рублей</td>
-                    </tr>
-                </tbody>
-            </table>
+
+            <div class="page__tableblock__table__wrapper">
+                <table class="page__tableblock__table">
+                    <thead>
+                        <tr>
+                            <td>Документ</td>
+                            <td>Стоимость</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Сертификат соответствия продукции</td>
+                            <td>от 10 000 рублей</td>
+                        </tr>
+                        <tr>
+                            <td>Сертификат соответствия продукции</td>
+                            <td>от 10 000 рублей</td>
+                        </tr>
+                        <tr>
+                            <td>Сертификат соответствия продукции</td>
+                            <td>от 10 000 рублей</td>
+                        </tr>
+                        <tr>
+                            <td>Сертификат соответствия продукции</td>
+                            <td>от 10 000 рублей</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
             <!--END page__tableblock__table -->
         </div>
         <div class="page__tableblock__cards">
