--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <title>Центр сертификации | Главная</title>
     <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/media.css" />
 </head>
@@ -102,51 +103,58 @@
             <h2 class="section-title">Плюсы центра сертификации</h2>
             <div class="plus__items">
                 <!-- plus__item -->
-                <div class="plus__item">
+                <div class="plus__item wow slideInUp" data-wow-duration="0.5s" data-wow-delay="0">
                     <img src="img/plus_1.svg" alt="" class="plus__item__img" />
                     <div class="plus__item__title">Разумные цены;</div>
                     <div class="plus__item__desc"> Теперь вы можете прйти короткий опрос это заменит около 30 секунд за эти 30 секунд мы поймем что вам предложить </div>
                 </div>
                 <!--END plus__item -->
                 <!-- plus__item -->
-                <div class="plus__item">
+                <div class="plus__item wow slideInUp" data-wow-duration="0.5s" data-wow-delay="0.1s">
                     <img src="img/plus_2.svg" alt="" class="plus__item__img" />
                     <div class="plus__item__title">Штат профессионалов;</div>
                     <div class="plus__item__desc"> Теперь вы можете прйти короткий опрос это заменит около 30 секунд за эти 30 секунд мы поймем что вам предложить </div>
                 </div>
                 <!--END plus__item -->
                 <!-- plus__item -->
-                <div class="plus__item">
+                <div class="plus__item wow slideInUp" data-wow-duration="0.5s" data-wow-delay="0.2s">
                     <img src="img/plus_3.svg" alt="" class="plus__item__img" />
                     <div class="plus__item__title"> Готовый сертификат от 1 дня; </div>
                     <div class="plus__item__desc"> Теперь вы можете прйти короткий опрос это заменит около 30 секунд за эти 30 секунд </div>
                 </div>
                 <!--END plus__item -->
                 <!-- plus__item -->
-                <div class="plus__item">
+                <div class="plus__item wow slideInUp" data-wow-duration="0.5s" data-wow-delay="0.3s">
                     <img src="img/plus_4.svg" alt="" class="plus__item__img" />
                     <div class="plus__item__title"> Бесплатная доставка документов; </div>
                     <div class="plus__item__desc"> Теперь вы можете прйти короткий опрос это заменит около 30 секунд за эти 30 секунд </div>
                 </div>
                 <!--END plus__item -->
                 <!-- plus__item -->
-                <div class="plus__item">
+                <div class="plus__item wow slideInUp" data-wow-duration="0.5s" data-wow-delay="0.4s">
                     <img src="img/plus_5.svg" alt="" class="plus__item__img" />
                     <div class="plus__item__title"> Постоянная работа с клиентом, консультирование по нормативно-правовым актам </div>
                 </div>
                 <!--END plus__item -->
                 <!-- plus__item -->
-                <div class="plus__item">
+                <div class="plus__item wow slideInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
                     <img src="img/plus_6.svg" alt="" class="plus__item__img" />
                     <div class="plus__item__title"> Поддержка клиентов на всех этапах оформления сертификата; </div>
                     <div class="plus__item__desc"> Теперь вы можете прйти короткий опрос это заменит около 30 секунд </div>
                 </div>
                 <!--END plus__item -->
                 <!-- plus__item -->
-                <div class="plus__item">
+                <div class="plus__item wow slideInUp" data-wow-duration="0.5s" data-wow-delay="0.6s">
                     <img src="img/plus_7.svg" alt="" class="plus__item__img" />
                     <div class="plus__item__title"> Поможем предпринимателям выйти на международный рынок </div>
                     <div class="plus__item__desc"> Теперь вы можете прйти короткий опрос это заменит около 30 секунд </div>
+                </div>
+                <!--END plus__item -->
+                <!-- plus__item -->
+                <div class="plus__item wow slideInUp" data-wow-duration="0.5s" data-wow-delay="0.7s">
+                    <img src="img/plus_8.png" alt="" class="plus__item__img" />
+                    <div class="plus__item__title"> работаем по всей <br /> России </div>
+                    <div class="plus__item__desc"> Работаем не только по региону, но и по всей России </div>
                 </div>
                 <!--END plus__item -->
             </div>
@@ -160,6 +168,7 @@
             <div class="steps__items">
                 <!-- steps__item -->
                 <div class="steps__item">
+                    <img src="img/steps__arrow.png" alt="" class="steps__item__arrow wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.7s" />
                     <div class="steps__item__num">1</div>
                     <div class="steps__item__text">
                         <div class="steps__item__title">Подзаголовок</div>
@@ -169,6 +178,7 @@
                 <!--END steps__item -->
                 <!-- steps__item -->
                 <div class="steps__item">
+                    <img src="img/steps__arrow.png" alt="" class="steps__item__arrow" />
                     <div class="steps__item__num">2</div>
                     <div class="steps__item__text">
                         <div class="steps__item__title">Подзаголовок</div>
@@ -186,7 +196,7 @@
                 </div>
                 <!--END steps__item -->
                 <!-- steps__item -->
-                <div class="steps__item">
+                <div class="steps__item steps__item__arrow">
                     <div class="steps__item__num">4</div>
                     <div class="steps__item__text">
                         <div class="steps__item__title">Подзаголовок</div>
@@ -195,7 +205,7 @@
                 </div>
                 <!--END steps__item -->
                 <!-- steps__item -->
-                <div class="steps__item">
+                <div class="steps__item steps__item__arrow">
                     <div class="steps__item__num">5</div>
                     <div class="steps__item__text">
                         <div class="steps__item__title">Подзаголовок</div>
@@ -378,7 +388,10 @@
                 </div>
                 <!-- contacts__item -->
                 <!-- contacts__item -->
-                <div class="contacts__map" id="contacts__map"></div>
+                <div class="contacts__map__wrapper">
+                    <div class="contacts__map__title"> Можете приехать к нам в офис </div>
+                    <div class="contacts__map" id="contacts__map"></div>
+                </div>
                 <!--END contacts__item -->
             </div>
         </div>
@@ -597,11 +610,11 @@
             <form class="form" action="">
                 <div class="form__inputgroup">
                     <label for="">Введите Ваше имя:</label>
-                    <input type="text" placeholder="Александр Иванов" />
+                    <input data-mask="fio" type="text" placeholder="Александр Иванов" />
                 </div>
                 <div class="form__inputgroup">
                     <label for="">Введите Ваш номер телефона:</label>
-                    <input type="text" placeholder="+7 999 876-54-32" />
+                    <input data-mask="phone" type="text" placeholder="+7 999 876-54-32" />
                 </div>
                 <div class="form__politics"> Нажимая на кнопку "отправить" Вы принимаете условия <a href="">политики конфинденциальности</a>
                 </div>
@@ -616,11 +629,11 @@
             <form class="form" action="">
                 <div class="form__inputgroup">
                     <label for="">Введите Ваше имя:</label>
-                    <input type="text" placeholder="Александр Иванов" />
+                    <input data-mask="fio" type="text" placeholder="Александр Иванов" />
                 </div>
                 <div class="form__inputgroup">
                     <label for="">Введите Ваш номер телефона:</label>
-                    <input type="text" placeholder="+7 999 876-54-32" />
+                    <input data-mask="phone" type="text" placeholder="+7 999 876-54-32" />
                 </div>
                 <div class="form__politics"> Нажимая на кнопку "отправить" Вы принимаете условия <a href="">политики конфинденциальности</a>
                 </div>
@@ -678,6 +691,8 @@
     <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <script src="js/mask.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
