--- a/app/nunjucks/contacts.html
+++ b/app/nunjucks/contacts.html
@@ -13,7 +13,6 @@
             Контакты
         </h1>
         <div class="page__head__btnblock">
-            <button class="btn__noborderradius">Сохранить в закладки</button>
             <div class="page__head__social">
                 <a href="/">
                     <img src="img/page__head__fb.png" alt="" />
@@ -29,7 +28,6 @@
     </div>
 </div>
 <!--END page__head -->
-
 <!-- contacts__mapblock -->
 <div class="contacts__mapblock">
     <div class="container">
@@ -60,7 +58,6 @@
     </div>
 </div>
 <!--END contacts__mapblock -->
-
 <!-- contacts__requisites -->
 <div class="contacts__requisites">
     <div class="container">
@@ -106,21 +103,17 @@
                 </li>
             </ul>
         </div>
+        <a href="" class="btn__noborderradius">Скачать реквизиты</a>
     </div>
 </div>
 <!--END contacts__requisites -->
-
 <!-- form -->
 <div class="formblock">
     <div class="container">
         <h2 class="section-title">Впервые оформляете сертификат?</h2>
         <div class="formblock__main">
             <div class="page__formblock__main__img__wrapper nop">
-                <img
-                    src="img/formblock_form.png"
-                    alt=""
-                    class="formblock__main__img"
-                />
+                <img src="img/formblock_form.png" alt="" class="formblock__main__img" />
             </div>
             <div class="formblock__main__title">
                 Оставьте заявку, на сертификат или конусультацию
