--- a/app/nunjucks/index.html
+++ b/app/nunjucks/index.html
@@ -87,7 +87,11 @@
         <h2 class="section-title">Плюсы центра сертификации</h2>
         <div class="plus__items">
             <!-- plus__item -->
-            <div class="plus__item">
+            <div
+                class="plus__item wow slideInUp"
+                data-wow-duration="0.5s"
+                data-wow-delay="0"
+            >
                 <img src="img/plus_1.svg" alt="" class="plus__item__img" />
                 <div class="plus__item__title">Разумные цены;</div>
                 <div class="plus__item__desc">
@@ -97,7 +101,11 @@
             </div>
             <!--END plus__item -->
             <!-- plus__item -->
-            <div class="plus__item">
+            <div
+                class="plus__item wow slideInUp"
+                data-wow-duration="0.5s"
+                data-wow-delay="0.1s"
+            >
                 <img src="img/plus_2.svg" alt="" class="plus__item__img" />
                 <div class="plus__item__title">Штат профессионалов;</div>
                 <div class="plus__item__desc">
@@ -107,7 +115,11 @@
             </div>
             <!--END plus__item -->
             <!-- plus__item -->
-            <div class="plus__item">
+            <div
+                class="plus__item wow slideInUp"
+                data-wow-duration="0.5s"
+                data-wow-delay="0.2s"
+            >
                 <img src="img/plus_3.svg" alt="" class="plus__item__img" />
                 <div class="plus__item__title">
                     Готовый сертификат от 1 дня;
@@ -119,7 +131,11 @@
             </div>
             <!--END plus__item -->
             <!-- plus__item -->
-            <div class="plus__item">
+            <div
+                class="plus__item wow slideInUp"
+                data-wow-duration="0.5s"
+                data-wow-delay="0.3s"
+            >
                 <img src="img/plus_4.svg" alt="" class="plus__item__img" />
                 <div class="plus__item__title">
                     Бесплатная доставка документов;
@@ -131,7 +147,11 @@
             </div>
             <!--END plus__item -->
             <!-- plus__item -->
-            <div class="plus__item">
+            <div
+                class="plus__item wow slideInUp"
+                data-wow-duration="0.5s"
+                data-wow-delay="0.4s"
+            >
                 <img src="img/plus_5.svg" alt="" class="plus__item__img" />
                 <div class="plus__item__title">
                     Постоянная работа с клиентом, консультирование по
@@ -140,7 +160,11 @@
             </div>
             <!--END plus__item -->
             <!-- plus__item -->
-            <div class="plus__item">
+            <div
+                class="plus__item wow slideInUp"
+                data-wow-duration="0.5s"
+                data-wow-delay="0.5s"
+            >
                 <img src="img/plus_6.svg" alt="" class="plus__item__img" />
                 <div class="plus__item__title">
                     Поддержка клиентов на всех этапах оформления сертификата;
@@ -152,7 +176,11 @@
             </div>
             <!--END plus__item -->
             <!-- plus__item -->
-            <div class="plus__item">
+            <div
+                class="plus__item wow slideInUp"
+                data-wow-duration="0.5s"
+                data-wow-delay="0.6s"
+            >
                 <img src="img/plus_7.svg" alt="" class="plus__item__img" />
                 <div class="plus__item__title">
                     Поможем предпринимателям выйти на международный рынок
@@ -160,6 +188,22 @@
                 <div class="plus__item__desc">
                     Теперь вы можете прйти короткий опрос это заменит около 30
                     секунд
+                </div>
+            </div>
+            <!--END plus__item -->
+            <!-- plus__item -->
+            <div
+                class="plus__item wow slideInUp"
+                data-wow-duration="0.5s"
+                data-wow-delay="0.7s"
+            >
+                <img src="img/plus_8.png" alt="" class="plus__item__img" />
+                <div class="plus__item__title">
+                    работаем по всей <br />
+                    России
+                </div>
+                <div class="plus__item__desc">
+                    Работаем не только по региону, но и по всей России
                 </div>
             </div>
             <!--END plus__item -->
@@ -174,6 +218,13 @@
         <div class="steps__items">
             <!-- steps__item -->
             <div class="steps__item">
+                <img
+                    src="img/steps__arrow.png"
+                    alt=""
+                    class="steps__item__arrow wow fadeInUp"
+                    data-wow-duration="0.5s"
+                    data-wow-delay="0.7s"
+                />
                 <div class="steps__item__num">1</div>
                 <div class="steps__item__text">
                     <div class="steps__item__title">Подзаголовок</div>
@@ -186,6 +237,11 @@
             <!--END steps__item -->
             <!-- steps__item -->
             <div class="steps__item">
+                <img
+                    src="img/steps__arrow.png"
+                    alt=""
+                    class="steps__item__arrow"
+                />
                 <div class="steps__item__num">2</div>
                 <div class="steps__item__text">
                     <div class="steps__item__title">Подзаголовок</div>
@@ -209,7 +265,7 @@
             </div>
             <!--END steps__item -->
             <!-- steps__item -->
-            <div class="steps__item">
+            <div class="steps__item steps__item__arrow">
                 <div class="steps__item__num">4</div>
                 <div class="steps__item__text">
                     <div class="steps__item__title">Подзаголовок</div>
@@ -221,7 +277,7 @@
             </div>
             <!--END steps__item -->
             <!-- steps__item -->
-            <div class="steps__item">
+            <div class="steps__item steps__item__arrow">
                 <div class="steps__item__num">5</div>
                 <div class="steps__item__text">
                     <div class="steps__item__title">Подзаголовок</div>
@@ -577,7 +633,12 @@
             </div>
             <!-- contacts__item -->
             <!-- contacts__item -->
-            <div class="contacts__map" id="contacts__map"></div>
+            <div class="contacts__map__wrapper">
+                <div class="contacts__map__title">
+                    Можете приехать к нам в офис
+                </div>
+                <div class="contacts__map" id="contacts__map"></div>
+            </div>
             <!--END contacts__item -->
         </div>
     </div>
