--- a/app/shtrihkod.html
+++ b/app/shtrihkod.html
@@ -7,6 +7,7 @@
     <title>Центр сертификации | Штрихкодирование</title>
     <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/media.css" />
 </head>
@@ -386,11 +387,11 @@
             <form class="form" action="">
                 <div class="form__inputgroup">
                     <label for="">Введите Ваше имя:</label>
-                    <input type="text" placeholder="Александр Иванов" />
+                    <input data-mask="fio" type="text" placeholder="Александр Иванов" />
                 </div>
                 <div class="form__inputgroup">
                     <label for="">Введите Ваш номер телефона:</label>
-                    <input type="text" placeholder="+7 999 876-54-32" />
+                    <input data-mask="phone" type="text" placeholder="+7 999 876-54-32" />
                 </div>
                 <div class="form__politics"> Нажимая на кнопку "отправить" Вы принимаете условия <a href="">политики конфинденциальности</a>
                 </div>
@@ -405,11 +406,11 @@
             <form class="form" action="">
                 <div class="form__inputgroup">
                     <label for="">Введите Ваше имя:</label>
-                    <input type="text" placeholder="Александр Иванов" />
+                    <input data-mask="fio" type="text" placeholder="Александр Иванов" />
                 </div>
                 <div class="form__inputgroup">
                     <label for="">Введите Ваш номер телефона:</label>
-                    <input type="text" placeholder="+7 999 876-54-32" />
+                    <input data-mask="phone" type="text" placeholder="+7 999 876-54-32" />
                 </div>
                 <div class="form__politics"> Нажимая на кнопку "отправить" Вы принимаете условия <a href="">политики конфинденциальности</a>
                 </div>
@@ -467,6 +468,8 @@
     <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <script src="js/mask.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
