--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/media.css" />
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -234,7 +235,7 @@
             <div class="section-desc green"> Посмотреть актуальные цены Вы можете на сайте или узнать по телефону. <br /> Наши специалисты проконсультируют и ответят на все вопросы. </div>
             <div class="prices__items">
                 <!-- prices__item -->
-                <div class="prices__item" style="background-image: url(img/prices-1.jpg);">
+                <div class="prices__item" style="background-image: url(img/sertificate.png);">
                     <div class="prices__item__title"> Сертификат соответствия ТР ТС </div>
                     <div class="prices__item__desc"> У нас собственная аккредитация и собственные аккредитованные лаборатории, поэтому мы не работаем как посредники. </div>
                     <div class="prices__item__price">от 4 000 руб</div>
@@ -242,7 +243,7 @@
                 </div>
                 <!--END prices__item -->
                 <!-- prices__item -->
-                <div class="prices__item" style="background-image: url(img/prices-2.jpg);">
+                <div class="prices__item" style="background-image: url(img/sertificate.png);">
                     <div class="prices__item__title"> декларация соответствия ТР ТС </div>
                     <div class="prices__item__desc"> У нас собственная аккредитация и собственные аккредитованные лаборатории, поэтому мы не работаем как посредники. </div>
                     <div class="prices__item__price">от 2 000 руб</div>
@@ -250,7 +251,7 @@
                 </div>
                 <!--END prices__item -->
                 <!-- prices__item -->
-                <div class="prices__item" style="background-image: url(img/prices-3.jpg);">
+                <div class="prices__item" style="background-image: url(img/sertificate.png);">
                     <div class="prices__item__title"> Декларация сертификации ГОСТ Р </div>
                     <div class="prices__item__desc"> У нас собственная аккредитация и собственные аккредитованные лаборатории, поэтому мы не работаем как посредники. </div>
                     <div class="prices__item__price">от 5 000 руб</div>
@@ -258,7 +259,7 @@
                 </div>
                 <!--END prices__item -->
                 <!-- prices__item -->
-                <div class="prices__item" style="background-image: url(img/prices-4.jpg);">
+                <div class="prices__item" style="background-image: url(img/sertificate.png);">
                     <div class="prices__item__title"> Сертификат соответствия ГОСТ Р </div>
                     <div class="prices__item__desc"> У нас собственная аккредитация и собственные аккредитованные лаборатории, поэтому мы не работаем как посредники. </div>
                     <div class="prices__item__price">от 6 000 руб</div>
@@ -266,7 +267,7 @@
                 </div>
                 <!--END prices__item -->
                 <!-- prices__item -->
-                <div class="prices__item" style="background-image: url(img/prices-5.jpg);">
+                <div class="prices__item" style="background-image: url(img/sertificate.png);">
                     <div class="prices__item__title"> Сертификат Таможенного союза </div>
                     <div class="prices__item__desc"> У нас собственная аккредитация и собственные аккредитованные лаборатории, поэтому мы не работаем как посредники. </div>
                     <div class="prices__item__price">от 5 500 руб</div>
@@ -274,7 +275,7 @@
                 </div>
                 <!--END prices__item -->
                 <!-- prices__item -->
-                <div class="prices__item" style="background-image: url(img/prices-6.jpg);">
+                <div class="prices__item" style="background-image: url(img/sertificate.png);">
                     <div class="prices__item__title"> Добровольная сертификация </div>
                     <div class="prices__item__desc"> У нас собственная аккредитация и собственные аккредитованные лаборатории, поэтому мы не работаем как посредники. </div>
                     <div class="prices__item__price">от 3 000 руб</div>
@@ -282,7 +283,7 @@
                 </div>
                 <!--END prices__item -->
                 <!-- prices__item -->
-                <div class="prices__item" style="background-image: url(img/prices-7.jpg);">
+                <div class="prices__item" style="background-image: url(img/sertificate.png);">
                     <div class="prices__item__title"> Сертификация халяль </div>
                     <div class="prices__item__desc"> У нас собственная аккредитация и собственные аккредитованные лаборатории, поэтому мы не работаем как посредники. </div>
                     <div class="prices__item__price">от 10 000 руб</div>
@@ -290,7 +291,7 @@
                 </div>
                 <!--END prices__item -->
                 <!-- prices__item -->
-                <div class="prices__item" style="background-image: url(img/prices-8.jpg);">
+                <div class="prices__item" style="background-image: url(img/sertificate.png);">
                     <div class="prices__item__title"> Экологический сертификат </div>
                     <div class="prices__item__desc"> У нас собственная аккредитация и собственные аккредитованные лаборатории, поэтому мы не работаем как посредники. </div>
                     <div class="prices__item__price">от 15 000 руб</div>
@@ -298,7 +299,7 @@
                 </div>
                 <!--END prices__item -->
                 <!-- prices__item -->
-                <div class="prices__item" style="background-image: url(img/prices-9.jpg);">
+                <div class="prices__item" style="background-image: url(img/sertificate.png);">
                     <div class="prices__item__title"> Отказное <br /> письмо </div>
                     <div class="prices__item__desc"> У нас собственная аккредитация и собственные аккредитованные лаборатории, поэтому мы не работаем как посредники. </div>
                     <div class="prices__item__price">от 1 000 руб</div>
@@ -306,7 +307,7 @@
                 </div>
                 <!--END prices__item -->
                 <!-- prices__item -->
-                <div class="prices__item" style="background-image: url(img/prices-10.jpg);">
+                <div class="prices__item" style="background-image: url(img/sertificate.png);">
                     <div class="prices__item__title"> Сертификат <br /> исо 9001 </div>
                     <div class="prices__item__desc"> У нас собственная аккредитация и собственные аккредитованные лаборатории, поэтому мы не работаем как посредники. </div>
                     <div class="prices__item__price">от 5 000 руб</div>
