--- a/app/contacts.html
+++ b/app/contacts.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/media.css" />
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
